<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2a3132"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/btn_google_auth"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginStart="151dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="151dp"
        android:src="@drawable/googleg_standard_color_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_registrar" />

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="295dp"
        android:layout_height="309dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="58dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar_photoroom" />

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="125dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="78dp"
        android:backgroundTint="#2EA66A"
        android:importantForAutofill="no"
        android:text="@string/registrarse"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_password" />

    <EditText
        android:id="@+id/edtxt_password"
        android:layout_width="256dp"
        android:layout_height="53dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:textColor="#E2D8D4"
        android:textColorHint="#E2D8D4"
        android:textColorLink="#E2D8D4"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_email_address" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="124dp"
        android:layout_height="51dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="7dp"
        android:backgroundTint="#2EA66A"
        android:text="Ingresar"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_registrar"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_password" />

    <EditText
        android:id="@+id/edtxt_email_address"
        android:layout_width="256dp"
        android:layout_height="53dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:hint="@string/correo_electronico"
        android:inputType="textEmailAddress"
        android:textColor="#E2D8D4"
        android:textColorHint="#E2D8D4"
        android:textColorLink="#E2D8D4"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_login" />

</androidx.constraintlayout.widget.ConstraintLayout>